--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,6 +8,6 @@
     }
   },
   "ConnectionStrings": {
-    "MotoManagement": "Data Source=DESKTOP-81STRLN\\LUCIFER; Initial Catalog=MotoManagement; Integrated Security=SSPI;MultipleActiveResultSets=True;"
+    "LearningVocabulary": "Data Source=DESKTOP-81STRLN\\LUCIFER; Initial Catalog=LearningVocabulary; Integrated Security=SSPI;MultipleActiveResultSets=True;"
   }
 }
